Made a nice documentation folder structure:   - All the documentation outputs will go to ./doc/mockgals/   - All the documentation source files are are ./doc/docsrc/   - Programs to make the plot data and plot them in LaTex     are in ./doc/MakingPlots.
Added MathJax capability to the HTML documents so the equations
can nicely be shown in HTML.

Added CSS to the HTML document, making it it much more easier
to read than the default Texinfo HTML style.

--- a/doc/MakingPlots/LaTeX/Plots.tex
+++ b/doc/MakingPlots/LaTeX/Plots.tex
@@ -22,8 +22,25 @@
     tick style={semithick},
 }
 
+%Bibliography:
+\usepackage[
+    backend=biber,
+    style=authoryear,
+    hyperref=true,
+    doi=false,
+    url=false,
+    eprint=false,
+    maxnames=5
+]{biblatex}
+\addbibresource{ref.bib}
+
 \begin{document}
 
   \input{./BaseFiles/MoffatGaussianComp.tex}
+
+  \input{./BaseFiles/SersicComp.tex}
+
+\cite{Sersicb}, \cite{Moffatb}, \cite{Moffat}, \cite{deVo}, \cite{sersic}
+\printbibliography 
 
 \end{document}
